@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <settings>
-	<category label="32216">
-		<setting visible="true" label="32217" type="action" action="RunScript(special://home/addons/service.subtitles.subtitles.gr/resources/lib/clear_cache.py)"/>
-	</category>
 	<category label="32211">
 		<setting type="lsep" label="xsubs.tv" />
 		<setting id="xsubstv.user" type="text" label="32212" default="" />
 		<setting id="xsubstv.pass" type="text" option="hidden" label="32213" default="" />
+	</category>
+	<category label="32216">
+		<setting visible="true" label="32217" type="action" action="RunScript(special://home/addons/service.subtitles.subtitles.gr/resources/lib/clear_cache.py)"/>
 	</category>
 </settings>
